--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <br>
     <hr>
     
-    <p>rtbcrtbrtbertbxt
+    <p style="color:red;">rtbcrtbrtbertbxt
     xbrbrtxbrtbrtebxretbertgvtrgtrvgrt</p>
     
     <img src="galaxy.jpeg">    
