made a code to show a link in a website

--- a/trailer.html
+++ b/trailer.html
@@ -1,1 +1,28 @@
-<a href="https://www.youtube.com/watch?v=vw2FOYjCz38" Trailer to my favorite movie </a>
+<!DOCTYPE html>
+
+
+<html>
+
+<head>
+<title>Trailer</title>
+    <link rel="stylesheet" href="styles.css">
+
+
+</head>
+
+<body>
+    
+
+    <a href="https://www.youtube.com/watch?v=vw2FOYjCz38" Trailer to my favorite movie </a>
+
+
+
+
+
+
+
+
+
+</body>
+
+</html>
