--- a/trailer.html
+++ b/trailer.html
@@ -13,7 +13,7 @@
 <body>
     
 
-    <a href="https://www.youtube.com/watch?v=vw2FOYjCz38" Trailer to my favorite movie </a>
+    <a href="https://www.youtube.com/watch?v=vw2FOYjCz38"> Trailer to my favorite movie </a>
 
 
 
