--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 style="color:orange;"> Welcome to my website </h1>
     <br> <br> <br> <hr> <br> <br> <br>
     <h2> 
-    <a href="">Trailer to my favorite movie </a>
+    <a href="trailer.html">Trailer to my favorite movie </a>
     <h2> this is my website </h2>
     <hr>
 
