--- a/trailer.html
+++ b/trailer.html
@@ -13,7 +13,7 @@
 <body>
     
 
-    <a href="https://www.youtube.com/watch?v=vw2FOYjCz38"> Trailer to my favorite movie </a>
+    <iframe width="1120" height="630" src="https://www.youtube.com/embed/vw2FOYjCz38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
     <a href="index.html"> Back to website</a>
 
