--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
     <br> <br> <br>
     sentance <sub>test</sub> text. 
     
-    <p>ficnrufguogifcrmohmoiugmroyigmorygruyg
-    regwtxrtrgbrgrgbrgbergbxertbrbrtb
-      rtbertberbrtxbrtbe</p>
+    <p>Τεωρίᾱ τηλικαύτην ἡγεῖσθαι πόλιν</p>
     
     <br>
     <hr>
