--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <p>Author: Sebastian</p>
   <a href='index.html' >Home</a> <br>
   <a href='trailer.html' >Trailer</a>
-  <p>All right reserved</p
+  <p>All rights reserved</p
 </footer>
           
 
