--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <ul>
-            <ahref="trailer.html"</a> 
+            <a href="trailer.html"></a> 
             <li><a href="trailer.html"></a></li>
             
 
