--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <header>
         <ul>
-            <a href="trailer.html"></a> 
-            <li><a href="trailer.html"></a></li>
+            <a href="trailer.html">Trailer without list</a> 
+            <li><a href="trailer.html"></a>Traler with list</li>
             
 
 
