--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <ul>
             <a href="trailer.html">Trailer without list</a> 
-            <li><a href="index.html"></a>Dot</li>
+            <li><a href="index.html">Dot</a></li>
             
 
 
