Added footer Id Contact Us

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <a href="trailer.html">Trailer without list</a> 
             <li><a href="index.html">Dot</a></li>
-            
+            <li><a href="#home-footer">Contact Us</a></li>
 
 
 
@@ -58,7 +58,7 @@
     
   </body>
   
-<footer>
+<footer id="home-footer">
   <p>Author: Sebastian</p>
   <a href='index.html' >Home</a> <br>
   <a href='trailer.html' >Trailer</a>
