--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
             <a href="trailer.html">Trailer without list</a> 
             <li><a href="index.html">Dot</a></li>
             <li><a href="#home-footer">Contact Us</a></li>
-
-
-
-
-
-
+            background-color: rgb(100,102,20);
+            color: wheat;
+            width: 100%;
+            height: max-content;
 
         </ul>
 
