--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             width: 100%;
             height: max-content;
 
+            position: fixed;
+            left: 0;
+            top: 0;
+             
         </ul>
 
     </header>
