removed the dots in header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
         <ul>
             <a href="trailer.html">Trailer without list</a> 
-            <li><a href="index.html">Dot</a></li>
-            <li><a href="#home-footer">Contact Us</a></li>
+            <a href="index.html">Dot</a>
+            <a href="#home-footer">Contact Us</a>
             
              
         </ul>
