--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <header>
         <ul>
-            <a href="trailer.html">Trailer without list</a> 
-            <a href="index.html">Dot</a>
-          <a href="#home-footer">Contact Us</a>
+            <li><a href="trailer.html">Trailer without list</a></li> 
+           <li><a href="index.html">Dot</a></li>
+          <li><a href="#home-footer">Contact Us</a></li>
             
              
         </ul>
