--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <ul>
             <li><a href="trailer.html">Trailer without list</a></li> 
-           <li><a href="index.html">Dot</a></li>
+           <li><a href="index.html">Back to website</a></li>
           <li><a href="#home-footer">Contact Us</a></li>
             
              
