--- a/trailer.html
+++ b/trailer.html
@@ -31,4 +31,11 @@
 
 </body>
 
+<footer id="home-footer">
+    <p>Author: Sebastian</p>
+    <a href='index.html' >Home</a> <br>
+    <a href='trailer.html' >Trailer</a>
+    <p>All rights reserved</p>
+    </footer>
+
 </html>
