changed some colors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     </header>
 
-    <h1 style="color:orange;"> Welcome to my website </h1>
+    <h1 style="color:031D44;"> Welcome to my website </h1>
     <br> <br> <br> <hr> <br> <br> <br>
     <h2> 
     <a href="trailer.html">Trailer to my favorite movie </a>
