--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <br>
     <hr>
     
-    <p style="color:yellow;">rtbcrtbrtbertbxt
+    <p style="color:#3F7CAC;">rtbcrtbrtbertbxt
     xbrbrtxbrtbrtebxretbertgvtrgtrvgrt</p>
     
     <img src="galaxy.jpeg">    
