--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <hr>
 
     <br>
-    <h3> Test website text </h3>
+    <h3> James Bond is enjoying a tranquil life in Jamaica after leaving active service. However, his peace is short-lived as his old CIA friend, Felix Leiter, shows up and asks for help. The mission to rescue a kidnapped scientist turns out to be far more treacherous than expected, leading Bond on the trail of a mysterious villain who's armed with a dangerous new technology. </h3>
     
     &nbsp&nbsp&nbsp&nbsp&nbsp Hi, My name is <i>Sebastian</i> and this is my first <b>website.</b>
     <br> <br>
