changed some stuff

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <br> <br> <br> <hr> <br> <br> <br>
     <h2> 
     <a href="trailer.html">Trailer to my favorite movie </a>
-    <h2> this is my website </h2>
+    <h2> Here is some information about the movie </h2>
     <hr>
 
     <br>
